--- a/forms/src/UIKit/Components/overlaypanel/OverlayPanel.css
+++ b/forms/src/UIKit/Components/overlaypanel/OverlayPanel.css
@@ -55,13 +55,13 @@
 }
 
 .p-overlaypanel:after {
-    border-width: 8px;
-    margin-left: -8px;
+    border-width: 8px !important;
+    margin-left: -8px !important;
 }
 
 .p-overlaypanel:before {
-    border-width: 10px;
-    margin-left: -10px;
+    border-width: 10px !important;
+    margin-left: -10px !important;
 }
 
 .p-overlaypanel-flipped:after,
