--- a/forms/src/UIKit/Components/overlaypanel/Thema.css
+++ b/forms/src/UIKit/Components/overlaypanel/Thema.css
@@ -7,7 +7,7 @@
 }
 
 .p-overlaypanel .p-overlaypanel-content {
-    padding: 1.25rem;
+   /*  padding: 1.25rem; */
 }
 
 .p-overlaypanel .p-overlaypanel-close {
