--- a/forms-react/src/css/global.scss
+++ b/forms-react/src/css/global.scss
@@ -1,4 +1,4 @@
-@import './reset';
+//@import './reset';
 
 html,
 body {
@@ -19,5 +19,5 @@ body {
 * {
   box-sizing: border-box;
 
-  transition: background-color 150ms ease-in, background 150ms ease-in;
+  //transition: background-color 150ms ease-in, background 150ms ease-in;
 }
